--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -18,6 +18,8 @@
     <i class="glyphicon glyphicon-minus substraction-button"
         (click)="substraction()"></i>
 
+    <i class="division-button" (click)="division()"> / </i>
+
 </div>
 
 <span class="result">{{ result }}</span>
