--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -20,6 +20,8 @@
 
     <i class="division-button" (click)="division()"> / </i>
 
+    <i class="multiplication-button" (click)="multiplication()"> * </i>
+
 </div>
 
 <span class="result">{{ result }}</span>
